Started styling on htmlTable

--- a/views/homepage.html
+++ b/views/homepage.html
@@ -68,10 +68,10 @@
             </div>
 
         <img id="screenshot" src="../images/place-holder.jpg" alt ="Screenshot of simulator">
-        <button id="btn" class="special-link-format">
-            <div id="btn-text">Go to Simulator</div>
-            <i id="btn-icon" class="gg-arrow-right-o"></i>
-        </button>
+        <a id="simulator-page-link" class="special-link-format" href="htmlTable.html">
+            <div id="simulator-page-link-text">Go to Simulator</div>
+            <i id="simulator-page-link-icon" class="gg-arrow-right-o"></i>
+        </a>
         <a id="top-shortcut" class="special-link-format" href="#banner">
             <div class="shortcut-text">Top</div>
             <i class="shortcut-icon gg-push-chevron-up"></i>
