--- a/css/homepageStyle.css
+++ b/css/homepageStyle.css
@@ -1,184 +1,189 @@
 body {
-	font-family: "Times New Roman", Times, serif;
-	overflow-x: hidden;
-	padding: 0px;
-	margin: 0px;
+  font-family: "Times New Roman", Times, serif;
+  overflow-x: hidden;
+  padding: 0px;
+  margin: 0px;
 }
 .special-link-format {
-	position: relative;
-	font-family: 'Roboto', sans-serif;
-	font-size: 11px;
-	text-transform: uppercase;
-	letter-spacing: 1.5px;
-	background-color: #1f2020;
-	border: 1px solid #333333;
-	border-radius: 3px;
-	color: #f5f5f5;
-	padding: 5px;
-	box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
-	transition: all 0.3s ease 0s;
-	cursor: pointer;
-	outline: none;
+  position: relative;
+  font-family: "Roboto", sans-serif;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  background-color: #1f2020;
+  border: 1px solid #333333;
+  border-radius: 3px;
+  color: #f5f5f5;
+  padding: 5px;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
 .special-link-format:hover {
-	background-color: #313333;
-	border-radius: 3px;
-	text-decoration: none;
-	box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
-	color: #fff;
-	transform: translateY(-7px);
+  background-color: #313333;
+  border-radius: 3px;
+  text-decoration: none;
+  box-shadow: 0px 15px 20px rgba(107, 104, 104, 0.4);
+  color: #fff;
+  transform: translateY(-7px);
 }
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 a.read-more {
-	float: center;
+  float: center;
 }
 p a {
-	color: rgba(66, 73, 73, 0.6);
+  color: rgba(66, 73, 73, 0.6);
 }
 p a:hover {
-	color: grey;
-	text-decoration: underline;
+  color: grey;
+  text-decoration: underline;
 }
 #banner {
-	color: white;
-	width: 100%;
-	height: 160px;
-	display: flex;
-	justify-content: center;
-	text-align: center;
-	align-content: center;
-	flex-direction: column;
-	background-image: url('../images/virus-banner.jpg');
-	background-size: 100% 300%;
+  position: relative;
+  color: white;
+  width: 100%;
+  height: 160px;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+  align-content: center;
+  flex-direction: column;
+  background-image: url("../images/virus-banner.jpg");
+  background-size: 100% 300%;
+  z-index: 3;
 }
 @media (max-width: 1500px) {
-	#banner {
-		background-size: 1500px 300%;
-	}
-	.wide-image {
-		width: 1500px;
-	}
+  #banner {
+    background-size: 1500px 300%;
+  }
+  .wide-image {
+    width: 1500px;
+  }
 }
 #title {
-	font-size: 60px;
-	font-weight: 700;
-	padding-top: 15px;
+  font-size: 60px;
+  font-weight: 700;
+  padding-top: 15px;
 }
 #title-names {
-	font-size: 18px;
-	color: lightgrey;
+  font-size: 18px;
+  color: lightgrey;
 }
 .shortcut-text {
-	position: relative;
-	top: 6px;
+  position: relative;
+  top: 6px;
 }
 .shortcut-icon {
-	float: right;
-	position: relative;
-	left: 3px;
-	bottom: 10px;
+  float: right;
+  position: relative;
+  left: 3px;
+  bottom: 10px;
 }
 #simulator-shortcut {
-	position: fixed;
-	width: 100px;
-	height: 25px;
-	right: 0px;
+  position: fixed;
+  width: 100px;
+  height: 25px;
+  right: 0px;
+  z-index: 1;
 }
 #top-shortcut {
-	float: right;
-	top: 35px;
-	width: 50px;
-	height: 25px;
+  float: right;
+  top: 35px;
+  width: 50px;
+  height: 25px;
 }
 #disease-header {
-	text-align: center;
-	font-family: 'Bitter', serif;
-	line-height: 54px;
-	margin-top: 60px;
-	color: rgba(0, 0, 0, 0.95);
-	font-size: 32px;
-	font-weight: normal;
+  text-align: center;
+  font-family: "Bitter", serif;
+  line-height: 54px;
+  margin-top: 60px;
+  color: rgba(0, 0, 0, 0.95);
+  font-size: 32px;
+  font-weight: normal;
 }
 .covid {
-	text-align: center;
-	font-size: 24px;
-	font-weight: 300;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 300;
 }
 .bubonic-plague {
-	text-align: center;
-	font-size: 24px;
-	font-weight: 300;
+  text-align: center;
+  font-size: 24px;
+  font-weight: 300;
 }
 .disease-text {
-	color: #313333;
-	margin-left: 75px;
-	margin-right: 100px;
-	text-align: center;
-	font-size: 18px;
-	font-weight: 300;
+  color: #313333;
+  margin-left: 75px;
+  margin-right: 100px;
+  text-align: center;
+  font-size: 18px;
+  font-weight: 300;
 }
 
 .fade-in {
-	opacity: 0;
-	transition: opacity 250ms ease-in;
+  opacity: 0;
+  transition: opacity 250ms ease-in;
 }
 
 .fade-in.appear {
-	opacity: 1;
+  opacity: 1;
 }
 
 .from-left,
 .from-right {
-	transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
-	transition: opacity 250ms ease-in, transform 400ms ease-in;
-	transition: opacity 250ms ease-in, transform 400ms ease-in, -webkit-transform 400ms ease-in;
-	opacity: 0;
+  transition: opacity 250ms ease-in, -webkit-transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in;
+  transition: opacity 250ms ease-in, transform 400ms ease-in,
+    -webkit-transform 400ms ease-in;
+  opacity: 0;
 }
 
 .from-left.appear,
 .from-right.appear {
-	-webkit-transform: translateX(0);
-	transform: translateX(0);
-	opacity: 1;
+  -webkit-transform: translateX(0);
+  transform: translateX(0);
+  opacity: 1;
 }
 
 #screenshot {
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
-	width: 50%;
-	padding-top: 55px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding-top: 55px;
 }
-#btn {
-	display: block;
-	width: 175px;
-	height: 40px;
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
+#simulator-page-link {
+  display: block;
+  width: 163px;
+  height: 28px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
 }
-#btn-icon {
-	display: inline-block;
-	position: relative;
-	top: 1px;
-	left: 3px;
+#simulator-page-link-icon {
+  display: inline-block;
+  position: relative;
+  top: 3px;
+  left: 8px;
 }
-#btn-text {
-	display: inline-block;
-	position: relative;
-	bottom: 5px;
+#simulator-page-link-text {
+  display: inline-block;
+  position: relative;
+  left: 5px;
+  bottom: 3px;
 }
 #footer-banner {
-	background-color: rgb(19, 19, 19);
-	color: white;
-	width: 100%;
-	height: 75px;
-	flex-direction: column;
-	margin-top: 75px;
+  background-color: rgb(19, 19, 19);
+  color: white;
+  width: 100%;
+  height: 75px;
+  flex-direction: column;
+  margin-top: 75px;
 }
 #sources {
-	padding: 5px;
-	color: lightgrey;
+  padding: 5px;
+  color: lightgrey;
 }
